# visual-novel-launcher

./: biome.json  export_bindings.sh  package.json  pnpm-lock.yaml
src/: App.css  App.tsx  bindings.ts
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  dev.db  diesel.toml  tauri.conf.json  ts-rs.toml
src-tauri/migrations/2026-01-17-221711-0000_init/: down.sql  up.sql
src-tauri/src/: cli.rs  lib.rs  main.rs  schema.rs
src-tauri/src/bridge/: dto.rs  mod.rs  requests.rs
src-tauri/src/commands/: create.rs  get.rs  mod.rs  remove.rs  update.rs  util.rs
src-tauri/src/database/: connection.rs  entities.rs  mod.rs  types.rs
src-tauri/src/database/entities/: mod.rs  setting.rs  tag.rs  visual_novel.rs  visual_novel_tag.rs
src-tauri/src/models/: mod.rs  tags.rs  visual_novel.rs
src-tauri/src/services/: launcher.rs  mod.rs  scanner.rs
src-tauri/src/utils/: fs.rs
